--- a/index.html
+++ b/index.html
@@ -10,21 +10,30 @@
 </head>
 <body>
     <h1>JavaScript</h1>
+    <h2>Красные фрукты</h2>
 
-    <!-- <table border="1">
-        <tr>
-            <td>*</td>
-            <td>*</td>
-        </tr>
-        <tr>
-            <td>*</td>
-            <td>*</td>
-        </tr>
-        <tr>
-            <td>*</td>
-            <td>*</td>
-        </tr>
-    </table> -->
+
+    <ul class="red">
+        <li>Клубника</li>
+        <li>Малина</li>
+        <li>Вишня</li>
+    </ul>
+
+    <h2>Фиолетовые фрукты</h2>
+    <ul class="purple">
+        <li>Ежевика</li>
+        <li>Слива</li>
+        <li>Виноград</li>
+    </ul>
+
+    <!-- <p id="text_1">Текст 1</p>
+    <p id="text_2">Текст 2</p>
+    <p></p>
+
+    <div class="a">Текст с классом A первый элемент</div>
+    <div class="a">Текст с классом A второй элемент</div>
+    <div class="a">Текст с классом B</div>
+    -->
 <script src="script.js"></script>
 </body>
 </html>
