--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <h2>Красные фрукты</h2>
+    <!-- <h2>Красные фрукты</h2>
 
 
     <ul class="red">
@@ -24,7 +24,7 @@
         <li>Ежевика</li>
         <li>Слива</li>
         <li>Виноград</li>
-    </ul>
+    </ul> -->
 
     <!-- <p id="text_1">Текст 1</p>
     <p id="text_2">Текст 2</p>
