--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     <!-- <script>
         console.log("Второй скрипт");
     </script> -->
+    <style>
+       /* #container{
+            background: yellow;
+            height: 400px;
+            width: 400px;
+            position: relative;
+       } 
+       #animate{
+            background: green;
+            height: 50px;
+            width: 50px;
+            position: absolute;
+       } */
+    </style>
 </head>
 <body>
     <h1>JavaScript</h1>
+    <!-- <img src="img/golden_star.png" alt="image"> -->
     <!-- <h2>Красные фрукты</h2>
 
 
@@ -34,6 +49,22 @@
     <div class="a">Текст с классом A второй элемент</div>
     <div class="a">Текст с классом B</div>
     -->
+    <!-- <p><a href = "#" id = "cl">Click me</a></p>
+    <p id="but">Нажми на меня</p>
+    <div id="container">
+        <div id="animate"></div>
+    </div> -->
+    <div id="clock">
+        <img src="img/c0.gif" alt="">
+        <img src="img/c0.gif" alt="">
+        <img src="img/dv.png" alt="">
+        <img src="img/c0.gif" alt="">
+        <img src="img/c0.gif" alt="">
+        <img src="img/dv.png" alt="">
+        <img src="img/c0.gif" alt="">
+        <img src="img/c0.gif" alt="">
+    </div>
+    <!-- <div id="ev"></div> -->
 <script src="script.js"></script>
 </body>
 </html>
