--- a/dz4/index.html
+++ b/dz4/index.html
@@ -37,7 +37,7 @@
         image1.src = image2.src;
         image2.src = tempSrc;
       } else {
-        alert("Укажите верное значение");
+        alert("Укажите верное значение (1, 2, 3)");
       }
     }
   </script>
