--- a/9dots/index.html
+++ b/9dots/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated 9 Dots Menu</title>
+    <title>Quiz App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="menu">
-        <div class="toggleBtn"><i class="fa-solid fa-plus"></i></div>
-        <li style = "--x:1;--y:0;--clr:#ff2972;"></li>
-            <a href="#"><i class="fa-solid fa-"></a>
+<div class="app">
+    <h1>Simple Quiz</h1>
+    <div class="quiz">
+        <h2 id="question">Question goes here</h2>
+        <div class="answer-buttons">
+            <button class="btn">Answer 1</button>
+            <button class="btn">Answer 2</button>
+            <button class="btn">Answer 3</button>
+            <button class="btn">Answer 4</button>
+        </div>
+        <button id="next-btn">Next</button>
     </div>
+</div>
+
+<script src="script.js">
+
+</script>
+    
     
 </body>
 </html>
