--- a/lesson22.07/index.html
+++ b/lesson22.07/index.html
@@ -32,6 +32,11 @@
         <input type="radio" name = "otv"> Yes<br>
         <input type="radio" name = "otv"> No<br>
     </form> -->
+    <form action="#file.php" name="form1">
+        <input type="text" name="title">
+        <input type="text" name="text">
+        <button>Save</button>
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
